; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_test-bus-track.c_track_cb_x.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_test-bus-track.c_track_cb_x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"TRACK CB X\00", align 1
@track_cb_called_x = common dso_local global i32 0, align 4
@SHUT_RDWR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @track_cb_x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @track_cb_x(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 @log_error(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @track_cb_called_x, align 4
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert_se(i32 %9)
  store i32 1, i32* @track_cb_called_x, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @sd_bus_track_get_bus(i32* %11)
  %13 = call i32 @sd_bus_get_fd(i32 %12)
  %14 = load i32, i32* @SHUT_RDWR, align 4
  %15 = call i64 @shutdown(i32 %13, i32 %14)
  %16 = icmp sge i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  ret i32 1
}

declare dso_local i32 @log_error(i8*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @shutdown(i32, i32) #1

declare dso_local i32 @sd_bus_get_fd(i32) #1

declare dso_local i32 @sd_bus_track_get_bus(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
